--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "tw:build": "tailwindcss build -i ./tailwind.css -o ./main.css"
+    "tw:build": "tailwindcss build ./public/css/tailwind.css -o ./public/css/main.css"
   },
   "author": "",
   "license": "ISC",
