--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@
 PGHOST='ep-tiny-boat-81487865.us-east-2.aws.neon.tech'
 PGDATABASE='senecaDB'
 PGUSER='Solaris5959'
-PGPASSWORD='not telling'
+PGPASSWORD='sWY5qDt2zZoK'
 ENDPOINT_ID='ep-tiny-boat-81487865'
